<resources>
    <string name="app_name">WafiApps</string>
    <string name="facebook_app_id">205190726749793</string>
    <string name="fb_login_protocol_scheme">fb205190726749793</string>
    <string name="font_path_gotham_regular">fonts/Gotham-Book-Regular.otf</string>
    <string name="font_path_gotham_bold">fonts/Gotham-Bold.otf</string>
    <string name="firewall_blocked">No internet connection.</string>
    <string name="snack_dismiss">DISMISS</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="spend_less_shop_more">Spend Less Shop More</string>
    <string name="thanks_we_re_verifing_your_number">Sit back and relax!</string>
    <string name="please_wait_a_moment">(Enter the OTP below in case "\n" we fail to detect the SMS automatically) </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="name">Name</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="password_changed">Password has been changed</string>
    <string name="failed">failed</string>
    <string name="passwords_shouldbes_same">password and confirm password should be same</string>
    <string name="subitem_name">SubItem Name</string>
    <string name="categories">Categories</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="forgot_password_change_pass">Forgot Password</string>
    <string name="see_all">See all</string>
    <string name="click_here_">Click Here</string>
    <string name="we_re_verifing_your_number">We\'re verifing your number</string>
    <string name="please_wait_a_moment_">Please wait a moment</string>
    <string name="item_name">item_name</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="error">Oops! Failed to load</string>
    <string name="change_address"><u>Change</u></string>
    <string name="agree"><![CDATA[By Tapping Login, Create Account I agree  to WafiApps Terms of Services, Privacy Policy and Shipping & Returns Policy]]></string>
    <string name="birthday"><![CDATA[By providing your birthday information,\nwe will surprise you with exclusive offers &\ndiscount codes to shop and celebrate.]]></string>
    <string name="enter_reset_code">Enter Reset Code</string>
    <string name="enter_the_reset_code_received_on_your_registered_email">Enter the reset code recieved on your registered email</string>
    <string name="verify">Verify</string>
    <string name="order_id">Order No</string>
    <string name="order_date">Order Date</string>
    <string name="order_total">Order Total</string>
    <string name="shipment_status">Shipment Status</string>
    <string name="status">Status</string>
    <string name="payment">Payment</string>
    <string name="shipment">Shipment</string>
    <string name="delivered_on">Delivered on</string>
    <string name="view_order_details">View Order Details</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="expected_delivery">Expected Delivery</string>
    <string name="shipment_method">Shipment Method</string>
    <string name="shipment_charges">Shipment Charges</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="billing_details">Billing Details</string>
    <string name="items">Items</string>
    <string name="discounts">Discounts</string>
    <string name="gift_card">Gift Card</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="forgot__your_password">Forgot your \npassword?</string>
    <string name="create_your_password">Create your \npassword</string>
    <string name="enter_your_email_to_find_your_account">Enter your email to find \nyour account.</string>
    <string name="not_sure_with_the_items_then_just_click_on_express_checkout_and_place_the_order_items_will_be_added_to_your_order_on_pickup">Not sure with the items? Then just click on Express checkout and place the order. Items will be added to your order on pickup.</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="wish_list">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="create_your_account">Create your Account</string>
    <string name="error_message_create_account_first_name"><![CDATA[<font color=\'red\'>Please enter First Name</font>]]></string>
    <string name="error_message_create_account_last_name"><![CDATA[<font color=\'red\'>Please enter Last Name</font>]]></string>
    <string name="error_message_create_account_email"><![CDATA[<font color=\'red\'>E-mail is not valid</font>]]></string>
    <string name="error_message_create_account_number"><![CDATA[<font color=\'red\'>Phone Number is not valid</font>]]></string>
    <string name="cart">Cart</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="address">Address</string>
    <string name="contact_us">Contact us</string>
    <string name="wishlist">Wishlist</string>
    <string name="font_path_lato_regular">fonts/Lato-Regular.ttf</string>
    <string name="font_path_lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="enter_a_valide_name">Enter a valid name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_flat_number">Enter your flat number</string>
    <string name="enter_your_building_number">Enter your building number</string>
    <string name="please_select_country">Please select country.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_address">Select Address</string>
    <string name="check_out">Check out</string>
    <string name="payment_method">Payment method</string>
    <string name="order_details">Order details</string>
    <string name="my_orders">My orders</string>
    <string name="laundry">WAFI apps.com</string>
    <string name="laundry_label">Laundry</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="condition_use">Conditions of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="bd">BD</string>
    <string name="delivery_charges">Delivery Charge :</string>
    <string name="delivery_time">Delivery Time :</string>
    <string name="min_order">Order :</string>
    <string name="max_item">Maximum items selected</string>
    <string name="date_not_valid">Date not valid</string>
    <string name="cash_delivery">CashOnDelivery</string>
    <string name="paytab">PayTab</string>
    <string name="add_new_address">Add New Address</string>
    <string name="ok">OK</string>
    <string name="select_area">Select Area</string>
    <string name="error_occured">Some error occurred</string>
    <string name="select_option">Please select an option</string>
    <string name="l_standard">Laundry type: Standard</string>
    <string name="l_premium">Laundry type: Premium</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete">Delete</string>
    <string name="sure_to_continue">Are you sure to continue?</string>
    <string name="cancel">Cancel</string>
    <string name="item_quantity">itemquantity</string>
    <string name="checkout_attribute_5">checkout_attribute_5</string>
    <string name="checkout_attribute_1">checkout_attribute_1</string>
    <string name="whatsapp_not_found">Whatsapp Application not found</string>
    <string name="denied_the_permission">Oops you just denied the permission</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="no_orders">No Orders Found</string>
    <string name="error_try_again">Some error occured,try again later</string>
    <string name="order_number">Order number :</string>
    <string name="server_error">Server error,Please try again</string>
    <string name="sure_to_logout">Are you sure to logout?</string>
    <string name="sure_to_exit">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="try_with_another_account">Some Error occurred, try again with another account!</string>
    <string name="select_country">Select Country</string>
    <string name="bahrain">Bahrain</string>
    <string name="enter_valid_name">Enter a valid name</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_flat_number">Enter your flat number</string>
    <string name="enter_building_number">Enter your building number</string>
    <string name="flat_no">Flat No:</string>
    <string name="building_no">, Building No:</string>
    <string name="road_no">, Road No:</string>
    <string name="block_no">, Block No:</string>
    <string name="area_name">, AreaName:</string>
    <string name="landmark">, LandMark:</string>
    <string name="network_error">Network Error</string>
    <string name="invalid_password"><![CDATA[<font color=\'red\'>Invalid password</font>]]></string>
    <string name="passwords_do_not_match"><![CDATA[<font color=\'red\'>Passwords do not match</font>]]></string>
    <string name="password_should_not_be_empty"><![CDATA[<font color=\'red\'>Password should not be empty</font>]]></string>
    <string name="minimum_six_characters_required"><![CDATA[<font color=\'red\'>Minimum six characters required.</font>]]></string>
    <string name="email_is_not_valid"><![CDATA[<font color=\'red\'>Email is not valid</font>]]></string>
    <string name="invalid_email"><![CDATA[<font color=\'red\'>Invalid Email</font>]]></string>
    <string name="invalid_number"><![CDATA[<font color=\'red\'>Invalid number</font>]]></string>
    <string name="confirm_order"><![CDATA[<font color=\'red\'>Confirm Order</font>]]></string>
    <string name="cancel_order"><![CDATA[<font color=\'gray\'>Cancel</font>]]></string>
    <string name="password_should_contain_6char"><![CDATA[<font color=\'red\'>Password should contain at least 6 characters</font>]]></string>
    <string name="send_email">Send mail via</string>
    <string name="share_app_text">Share App Via</string>
    <string name="mob">Mob:</string>
    <string name="no_items_to_checkout">No items to checkout!</string>
    <string name="nav_laundry">Laundry</string>
    <string name="nav_my_orders">My Orders</string>
    <string name="nav_my_wishlist">My Wish List</string>
    <string name="nav_my_account">My Account</string>
    <string name="no_items_in_your_cart">No Items in your cart!</string>
    <string name="explore_and_add_items_in_list">Explore and Add Items in List</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="your_password_must_be_6_or_more_ncharacters_long">Your password must be 6 or more characters long.</string>
    <string name="do_not_use_any_common_npasswords_or_repetition">Do not use any common passwords or repetition</string>
    <string name="change_your_password">Change your \npassword</string>
    <string name="enter_the_old_password_and_new_password">Fill all the following fields to update the password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
</resources>