<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ll_margin_otp"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/thanks_we_re_verifing_your_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/tv_good_size_otp"
                android:textStyle="bold" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ll_margin_bottom_otp"
                android:gravity="center_horizontal"
                android:text="@string/we_re_verifing_your_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/tv_good_size_otp"
                android:textStyle="bold" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/please_wait_a_moment"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/darkGray"
                android:textSize="@dimen/tv_size_otp" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:hint="@string/please_wait_a_moment_"
                android:textColor="#ffff"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1" />

            <com.mobtecnica.wafiapps.customViews.CustomEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:gravity="center_horizontal"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/darkGray" />

            <com.mobtecnica.wafiapps.customViews.CustomButton
                android:id="@+id/btn_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bt_margin_left_login"
                android:layout_marginRight="@dimen/bt_margin_left_login"
                android:background="@mipmap/btn_bg_large"
                android:text="@string/resend_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.mobtecnica.wafiapps.customViews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/spend_less_shop_more"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>


