<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pureWhite"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="20dp">

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/tv_forgot_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/change_your_password"
                android:textColor="@color/black"
                android:textSize="32dp"
                android:textStyle="bold" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/appCompatTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:text="@string/enter_the_old_password_and_new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/large" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.mobtecnica.wafiapps.customViews.CustomEditText
                        android:id="@+id/et_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edittext_background"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="@dimen/medium" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/new_password"
                    android:textColorHint="@color/black"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="false">

                    <com.mobtecnica.wafiapps.customViews.CustomEditText
                        android:id="@+id/et_user_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edittext_background"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="@dimen/medium" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/black"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="false">

                    <com.mobtecnica.wafiapps.customViews.CustomEditText
                        android:id="@+id/et_user_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edittext_background"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="@dimen/medium" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <customViews.CustomButton
                    android:id="@+id/btn_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/red_btn_login"
                    android:src="@drawable/ic_next_page"
                    android:text="@string/change_password"
                    android:textColor="@color/pureWhite"
                    android:textSize="@dimen/large" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>


