<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wafi_pattern"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingRight="10dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_back_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onBack"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/tv_forgot_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_your_password"
                android:textColor="@color/black"
                android:textSize="33dp"
                android:textStyle="bold" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/appCompatTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:text="@string/please_enter_your_new_password"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/appCompatTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/your_password_must_be_6_or_more_ncharacters_long"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <com.mobtecnica.wafiapps.customViews.CustomTextView
                android:id="@+id/appCompatTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/do_not_use_any_common_npasswords_or_repetition"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <!--<com.mobtecnica.wafiapps.customViews.CustomEditText-->
            <!--android:id="@+id/et_user_email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:background="@drawable/edittext_background"-->
            <!--android:textSize="18sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/material_drawer_hint_text"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.mobtecnica.wafiapps.customViews.CustomEditText
                        android:id="@+id/et_password_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/edittext_background"
                        android:imeOptions="actionNext"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/textColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/material_drawer_hint_text"
                    app:hintAnimationEnabled="true">

                    <com.mobtecnica.wafiapps.customViews.CustomEditText
                        android:id="@+id/et_confirm_pass_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/edittext_background"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="5dp"
                        android:textSize="15sp"
                        android:paddingRight="5dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|right"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/next_button"
                    android:src="@drawable/ic_next_page" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>